#128 Error Prone がエラー、警告を出力した部分を修正しました